src/components/character/character.css
.fa-spinner {
    font-size: 75px;
    color: white;
    animation-name: spin;
    animation-duration: 5000ms;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
}

@keyframes spin {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}

.spinnerShell {
    width: 75px;
    margin: 45px auto;
}

#pdf {
    width: 816px;
}

.pdfViewStylings {
    margin: 35px auto 0;
}

.pdfBackground {
    background-color: grey;
    padding: 15px 0;
}

.removeButtons {
    display: none;
}

.Buttons {
    position: sticky;
    display: flex;
    bottom: 0px;
    justify-content: space-between;
    align-items: center;
}

.corner-button {
    position: relative;
    background-color: whitesmoke;
    height: 50px;
    width: 50px;
}

.left-corner-button {
    border-top-right-radius: 50px;
}

.left-corner-button i {
    position: absolute;
    bottom: 10px;
    left: 5px
}

.right-corner-button {
    position: relative;
    border-top-left-radius: 50px;
}

.right-corner-button i {
    position: absolute;
    bottom: 5px;
    right: 5px
}

.editButton {
    position: sticky;
    bottom: 10px;
    margin-left: 10px
}

.fa-file-download, .fa-edit, .fa-save {
    font-size: 30px;
    color: black;
}

.fa-file-download:hover, .fa-edit:hover, .fa-save:hover {
    color: purple
}

.pageBase {
    height: 1056px;
    width: 816px;
    background-color: white;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
}

.pageViewStylings {
    -webkit-box-shadow: 5px 5px 15px 5px #000000;
    box-shadow: 5px 5px 15px 5px #000000;
}

.pageOne {
    background-image: url("../../assets/page1.png");
}

.pageTwo {
    background-image: url("../../assets/page2.png");
}

.pageTwoMargin {
    margin-top: 15px;
    margin-bottom: 15px;
}

.pageBase p, .pageBase input {
    position: absolute;
    font-size: 13px;
}

input, textarea {
    background: rgba(173, 216, 230, 0.50);
    border: none;
    position: relative;
    font-size: 13px;
}

.nameLocation {
    left: 123px;
    top: 7px;
}

input.nameLocation {
    top: 20px;
    width: 271px;
}

.raceLocation {
    left: 53px;
    top: 31px;
}

input.raceLocation {
    top: 43px;
    width: 68px;
}

.levelLocation {
    left: 489px;
    top: 31px;
}

input.levelLocation {
    top: 43px;
    left: 470px;
    width: 51px;
}

.primaryLocation {
    left: 195px;
    top: 31px;
}

input.primaryLocation {
    top: 43px;
    width: 86px;
}

.primarylevelLocation {
    left: 276px;
    top: 31px;
}

input.primarylevelLocation {
    left: 282px;
    top: 43px;
    width: 35px;
}

.secondaryLocation {
    left: 319px;
    top: 31px;
}

input.secondaryLocation {
    top: 43px;
    width: 93px;
}

.secondarylevelLocation {
    left: 420px;
    top: 31px;
}

input.secondarylevelLocation {
    left: 413px;
    top: 43px;
    width: 35px;
}

.crpLocation {
    left: 545px;
    top: 31px;
    width: 51px;
    text-align: center;
}

input.crpLocation {
    top: 43px;
    width: 51px;
}

.excurrentLocation {
    left: 319px;
    top: 53px;
    width: 127px;
    text-align: center;
}

input.excurrentLocation {
    top: 66px;
    width: 127px;
}

.extolevelLocation {
    left: 95px;
    top: 53px;
    width: 151px;
    text-align: center;
}

.drawbackLocation {
    left: 20px;
    top: 74px;
    text-indent: 123px;
    width: 426px;
}

.textArea {
    left: 20px;
    width: 426px;
    max-width: 426px;
    min-width: 426px;
    max-height: 62px;
    min-height: 62px;
    text-indent: 122px;
    overflow: hidden;
}

textarea.drawbackLocation {
    top: 87px;
}

.strLocation {
    left: 20px;
    top: 160px;
    width: 48px;
    text-align: center;
}

.strConfrontationLocation {
    left: 98px;
    top: 160px;
    width: 48px;
    text-align: center;
}

.strCarryLocation {
    left: 713px;
    top: 476px;
    width: 80px;
    text-align: center;
}

.strDamageLocation {
    left: 252px;
    top: 607px;
    width: 117px;
    text-align: center;
}

.dexLocation {
    left: 20px;
    top: 181px;
    width: 48px;
    text-align: center;
}

.dexConfrontationLocation {
    left: 98px;
    top: 181px;
    width: 48px;
    text-align: center;
}

.attackLocation {
    left: 254px;
    top: 543px;
    width: 116px;
    text-align: center;
}

.defenseLocation {
    left: 254px;
    top: 563px;
    width: 116px;
    text-align: center;
}

.initLocation {
    left: 254px;
    top: 583px;
    width: 116px;
    text-align: center;
}

.encumbLocation {
    left: 254px;
    top: 626px;
    width: 116px;
    text-align: center;
}

.conLocation {
    left: 20px;
    top: 202px;
    width: 48px;
    text-align: center;
}

.conConfrontationLocation {
    left: 98px;
    top: 202px;
    width: 48px;
    text-align: center;
}

.intLocation {
    left: 20px;
    top: 223px;
    width: 48px;
    text-align: center;
}

.intConfrontationLocation {
    left: 98px;
    top: 223px;
    width: 48px;
    text-align: center;
}

.wisLocation {
    left: 20px;
    top: 244px;
    width: 48px;
    text-align: center;
}

.wisConfrontationLocation {
    left: 98px;
    top: 244px;
    width: 48px;
    text-align: center;
}

.chaLocation {
    left: 20px;
    top: 265px;
    width: 48px;
    text-align: center;
}

.chaConfrontationLocation {
    left: 98px;
    top: 265px;
    width: 48px;
    text-align: center;
}

input.strLocation {
    top: 171px;
}

input.dexLocation {
    top: 192px;
}

input.conLocation {
    top: 213px;
}

input.intLocation {
    top: 234px;
}

input.wisLocation {
    top: 255px;
}

input.chaLocation {
    top: 276px;
}

.honorLocation {
    left: 20px;
    top: 330px;
    width: 48px;
    text-align: center;
}
input.honorLocation {
    top: 342px;
}

.temperamentLocation {
    left: 20px;
    top: 372px;
    width: 224px;
}
input.temperamentLocation {
    top: 383px;
}

.extrahonordiceLocation {
    left: 220px;
    top: 330px;
    width: 48px;
    text-align: center;
}

input.extrahonordiceLocation {
    top: 342px;
}

.takingabreatherLocation {
    top: 423px;
    left: 546px;
    width: 74px;
    text-align: center;
}

.stressthresholdLocation {
    top: 476px;
    left: 546px;
    width: 74px;
    text-align: center;
}

input.stressthresholdLocation {
    top: 488px;
}

.favormaxLocation {
    top: 538px;
    left: 521px;
    width: 50px;
    text-align: center;
}

input.favormaxLocation {
    top: 551px;
}

.favorminLocation {
    top: 538px;
    left: 571px;
    width: 50px;
    text-align: center;
}

.sizemodLocation {
    top: 813px;
    width: 48px;
    left: 524px;
    text-align: center;
}

input.sizemodLocation {
    top: 824px;
}

.criticalLocation {
    top: 601px;
    left: 722px;
    width: 74px;
    text-align: center;
}

input.criticalLocation {
    top: 614px;
}

.hurtLocation {
    top: 601px;
    left: 479px;
    width: 74px;
    text-align: center;
}

.bloodiedLocation {
    top: 601px;
    left: 555px;
    width: 74px;
    text-align: center;
}

.woundedLocation {
    top: 601px;
    left: 630px;
    width: 74px;
    text-align: center;
}

.traumaLocation {
    top: 642px;
    left: 621px;
    width: 74px;
    text-align: center;
}

.vitalityrollLocation {
    top: 813px;
    width: 47px;
    left: 599px;
    text-align: center;
}

input.vitalityrollLocation {
    top: 824px;
}

.vitalitydiceLocation {
    top: 813px;
    width: 36px;
    left: 685px;
    text-align: center;
}

input.vitalitydiceLocation {
    top: 824px;
}

.circle {
    border-radius: 50px/50px;
    border: solid 2px #000;
    width: 33px;
    height: 21px;
    top: 341px;
    position: relative;
}

.circle-fill {
    background: whitesmoke;
    font-size: 12px;
    border-radius: 14px;
    padding: 0 0 0 5px;
    width: 28px;
}

@media(max-width: 835px) {

    .corner-button {
        background: transparent
    }
}

